tests/ui/cve_2018_21000/cve_2018_21000.stderr
error: misordered parameters `len` and `cap` in `Vec::from_raw_parts`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:11:14
   |
LL |     unsafe { Vec::from_raw_parts(ptr as *mut T, capacity, len) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Vec::from_raw_parts` called here
   |
help: the correct order is `Vec::from_raw_parts(ptr, len, cap)`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:11:14
   |
LL |     unsafe { Vec::from_raw_parts(ptr as *mut T, capacity, len) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(rpl::misordered_parameters)]` on by default

error: misordered parameters `len` and `cap` in `Vec::from_raw_parts`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:21:14
   |
LL |     unsafe { Vec::from_raw_parts(ptr as *mut u8, capacity, len) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Vec::from_raw_parts` called here
   |
help: the correct order is `Vec::from_raw_parts(ptr, len, cap)`
  --> tests/ui/cve_2018_21000/cve_2018_21000.rs:21:14
   |
LL |     unsafe { Vec::from_raw_parts(ptr as *mut u8, capacity, len) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

